// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SetName Component should render correctly when a name is set 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SetName
    clickHandler={[Function]}
    name="Marge Simpson"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className={undefined}
      >
        Welcome, 
        Marge Simpson
        !  Let’s make a reservation!
      </div>,
      "className": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          "Welcome, ",
          "Marge Simpson",
          "!  Let’s make a reservation!",
        ],
        "className": undefined,
      },
      "ref": null,
      "rendered": Array [
        "Welcome, ",
        "Marge Simpson",
        "!  Let’s make a reservation!",
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className={undefined}
        >
          Welcome, 
          Marge Simpson
          !  Let’s make a reservation!
        </div>,
        "className": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Welcome, ",
            "Marge Simpson",
            "!  Let’s make a reservation!",
          ],
          "className": undefined,
        },
        "ref": null,
        "rendered": Array [
          "Welcome, ",
          "Marge Simpson",
          "!  Let’s make a reservation!",
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SetName Component should render correctly when no name is set 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SetName
    clickHandler={[Function]}
    name=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div>
        <input
          className={undefined}
          id="nameInput"
          onChange={[Function]}
          onKeyPress={[Function]}
          placeholder="Enter Name"
          type="text"
          value=""
        />
        <button
          className={undefined}
          id="nameButton"
          onClick={[Function]}
        >
          Set Name
        </button>
      </div>,
      "className": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <input
            className={undefined}
            id="nameInput"
            onChange={[Function]}
            onKeyPress={[Function]}
            placeholder="Enter Name"
            type="text"
            value=""
          />,
          <button
            className={undefined}
            id="nameButton"
            onClick={[Function]}
          >
            Set Name
          </button>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": undefined,
            "id": "nameInput",
            "onChange": [Function],
            "onKeyPress": [Function],
            "placeholder": "Enter Name",
            "type": "text",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Set Name",
            "className": undefined,
            "id": "nameButton",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Set Name",
          "type": "button",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div>
          <input
            className={undefined}
            id="nameInput"
            onChange={[Function]}
            onKeyPress={[Function]}
            placeholder="Enter Name"
            type="text"
            value=""
          />
          <button
            className={undefined}
            id="nameButton"
            onClick={[Function]}
          >
            Set Name
          </button>
        </div>,
        "className": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <input
              className={undefined}
              id="nameInput"
              onChange={[Function]}
              onKeyPress={[Function]}
              placeholder="Enter Name"
              type="text"
              value=""
            />,
            <button
              className={undefined}
              id="nameButton"
              onClick={[Function]}
            >
              Set Name
            </button>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": undefined,
              "id": "nameInput",
              "onChange": [Function],
              "onKeyPress": [Function],
              "placeholder": "Enter Name",
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Set Name",
              "className": undefined,
              "id": "nameButton",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "Set Name",
            "type": "button",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
